--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 }
 
 .container{
-    max-width:900px;
+    max-width:950px;
     margin:auto;
     background:#111827;
     padding:25px;
@@ -22,29 +22,38 @@ h1{
 
 .subtitle{
     text-align:center;
-    margin-bottom:20px;
+    margin-bottom:25px;
     color:#cbd5e1;
 }
 
 .question{
-    margin-bottom:15px;
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    margin-bottom:12px;
     padding:12px;
     border-bottom:1px solid #1f2937;
+    gap:20px;
+}
+
+.question-text{
+    flex:1;
 }
 
 select{
+    width:90px;
     padding:6px;
-    margin-left:10px;
     border-radius:6px;
     background:#020617;
     color:white;
     border:1px solid #334155;
+    text-align:center;
 }
 
 button{
     background:#38bdf8;
     color:black;
-    padding:14px 22px;
+    padding:14px;
     border:none;
     border-radius:8px;
     font-size:16px;
@@ -64,8 +73,12 @@ button:hover{
     background:#020617;
     border-radius:10px;
     display:none;
+    line-height:1.6;
 }
 
 canvas{
     margin-top:30px;
+    background:#020617;
+    border-radius:10px;
+    padding:10px;
 }
