--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ button{
     font-size:16px;
     cursor:pointer;
     width:100%;
-    margin-top:20px;
+    margin-top:15px;
     font-weight:bold;
 }
 
@@ -78,7 +78,7 @@ button:hover{
 
 canvas{
     margin-top:30px;
-    background:#020617;
+    background:white;
     border-radius:10px;
     padding:10px;
 }
